--- a/job_dep.yml
+++ b/job_dep.yml
@@ -5,10 +5,15 @@ metadata:
   labels:
     app: django-app-1
 spec:
-  replicas: 1
+  replicas: 3  # Set the desired number of replicas.
   selector:
     matchLabels:
       app: django-app-1
+  strategy:
+    type: RollingUpdate  # Specify the update strategy.
+    rollingUpdate:
+      maxUnavailable: 1  # Maximum number of unavailable pods during the update.
+      maxSurge: 1  # Maximum number of additional pods to create during the update.
   template:
     metadata:
       labels:
