--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   web:
     build: .
     container_name: jobportal-app-container
-    image: brijesh35/my-jobportal-app:latest
+    image: brijesh35/my-jobportal-app:1.3
     command: python manage.py runserver 0.0.0.0:8000
     ports:
       - 8000:8000
