--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -17,7 +17,7 @@ jobs:
       run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build Docker image
-      run: docker build -t your-docker-username/your-image-name:1.8 .
+      run: docker build -t secrets.DOCKER_USERNAME/my-jobportal-app:1.8 .
 
     - name: Push Docker image to Docker Hub
-      run: docker push your-docker-username/your-image-name:1.8
+      run: docker push secrets.DOCKER_USERNAME/my-jobportal-app:1.8
