--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -17,7 +17,6 @@ jobs:
       run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build Docker image
-      run: docker-compose build -t ${{ secrets.DOCKER_USERNAME }}/my-jobportal-app:${{ github.run_number }} .
-
+      run: docker-compose build
     - name: Push Docker image to Docker Hub
       run: docker push ${{ secrets.DOCKER_USERNAME }}/my-jobportal-app:${{ github.run_number }}
