--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -17,6 +17,9 @@ jobs:
       run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build Docker image
-      run: docker-compose build --build-arg TAG=${{ github.run_number }}
+      run: |
+         apt-get update
+         apt-get install -y docker-compose
+         docker-compose build --build-arg TAG=${{ github.run_number }}
     - name: Push Docker image to Docker Hub
       run: docker push ${{ secrets.DOCKER_USERNAME }}/my-jobportal-app:${{ github.run_number }}
