--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -13,13 +13,20 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Install Docker Compose
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y docker-compose
+
     - name: Login to Docker Hub
       run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build Docker image
       run: |
-         sudo apt-get update
-         sudo apt-get install -y docker-compose
-         sudo docker-compose build --build-arg TAG=${{ github.run_number }}
+        docker-compose build --build-arg TAG=${{ github.run_number }}
+        docker images # Add this line for debugging
+
     - name: Push Docker image to Docker Hub
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/my-jobportal-app:${{ github.run_number }}
+      run: |
+        docker push ${{ secrets.DOCKER_USERNAME }}/my-jobportal-app:${{ github.run_number }}
+        echo "Docker image pushed successfully"
