--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -21,6 +21,11 @@ jobs:
     - name: Login to Docker Hub
       run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
+    - name: Build Docker image
+      run: |
+        docker-compose build
+        docker images # Add this line for debugging
+
     - name: Push Docker image to Docker Hub
       run: |
         docker push ${{ secrets.DOCKER_USERNAME }}/my-jobportal-app:${{ github.run_number }}
