--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -23,7 +23,7 @@ jobs:
 
     - name: Build Docker image
       run: |
-        docker-compose build
+        docker-compose build --build-arg TAG=${{ secrets.DOCKER_USERNAME }}/my-jobportal-app:${{ github.run_number }} .
         docker images # Add this line for debugging
 
     - name: Push Docker image to Docker Hub
