--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -30,3 +30,28 @@ jobs:
       run: |
         docker-compose push
         echo "Docker image pushed successfully"
+modifygit:
+    needs: docker
+    runs-on: ubuntu-latest
+    steps:
+    - name: Print current directory
+      run: pwd
+      
+   - name: Checkout repository
+     uses: actions/checkout@v2
+     
+   - name: Modify the image
+     run: |
+     pwd
+     git config user.email agraharibrijesh77@gmail.com
+     git config user.name agraharibrijesh77
+     pwd
+     cd argocd
+     cat job_dep.yml
+     pwd
+     sed -i "s+brijesh35/my-jobportal-app:.*+brijesh35/my-jobportal-app:$RUN_NUMBER+g" job_dep.yml
+     cat job_dep.yml
+     git add .
+     git commit -m "Done by Github Actions Job change manifest: ${{ github.run_number }}"
+     git push
+     
