--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -30,6 +30,7 @@ jobs:
           docker-compose push
           echo "Docker image pushed successfully"
   modifygit:
+    needs: build-and-push
     runs-on: ubuntu-latest
     steps:
       - name: Print current directory
