--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,6 +3,6 @@ sonar.projectName=jobportal
 sonar.projectVersion=1.0
 sonar.language=python
 sonar.sources=jobportal-application
-# SonarQube server configuration
+# pSonarQube server configuration
 sonar.host.url=http://172.28.95.37:9000
 sonar.login=sqp_d71cf354e237a65f6011cd03657d2fa738614901
