--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,25 @@
+# sonar.projectKey=jobportal
+#sonar.projectName=jobportal
+#sonar.projectVersion=1.0
+#sonar.language=python
+#sonar.sources=jobportal-application
+# SonarQube server configuration
+#sonar.host.url=http://172.28.95.37:9000
+#sonar.login=sqp_d71cf354e237a65f6011cd03657d2fa738614901 */
+------------------------------------------------------------------
+
 sonar.projectKey=jobportal
 sonar.projectName=jobportal
 sonar.projectVersion=1.0
-sonar.language=python
+
+# Path to the source code (if it's not in the root directory, specify its relative path)
 sonar.sources=jobportal-application
-# SonarQube server configuration
+
+# Optional: Path to test files (if you have unit tests)
+#sonar.tests=tests
+
+# Optional: Path to coverage reports
+sonar.javascript.lcov.reportPaths=coverage/lcov-report/lcov-report.json
+
+# Specify SonarQube instance URL (this is the URL of your SonarQube container)
 sonar.host.url=http://172.28.95.37:9000
-sonar.login=sqp_d71cf354e237a65f6011cd03657d2fa738614901
