--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,14 +12,17 @@ sonar.projectKey=jobportal
 sonar.projectName=jobportal
 sonar.projectVersion=1.0
 
-# Path to the source code (if it's not in the root directory, specify its relative path)
+# Path to the source code directory (adjust to where your code is located)
 sonar.sources=jobportal-application
 
-# Optional: Path to test files (if you have unit tests)
-#sonar.tests=tests
+# Path to test files (optional, if you have tests in a separate folder)
+sonar.tests=jobportal-application/tests
 
-# Optional: Path to coverage reports
-sonar.javascript.lcov.reportPaths=coverage/lcov-report/lcov-report.json
+# Specify the language to analyze (Python)
+sonar.language=py
 
-# Specify SonarQube instance URL (this is the URL of your SonarQube container)
+# Optional: Path to coverage reports (if you have coverage reports, adjust as needed)
+sonar.python.coverage.reportPaths=coverage/coverage-report.xml  # Adjust the coverage report path to the correct format
+
+# Specify the SonarQube server URL (point to your SonarQube container IP)
 sonar.host.url=http://172.28.95.37:9000
