--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,7 @@
 #sonar.sources=jobportal-application
 # SonarQube server configuration
 #sonar.host.url=http://172.28.95.37:9000
-sonar.login=sqp_d71cf354e237a65f6011cd03657d2fa738614901 */
+
 ------------------------------------------------------------------
 # Add or modify this line
 sonar.java.jdkHome=/usr/lib/jvm/java-17-openjdk-amd64
@@ -28,3 +28,4 @@ sonar.python.coverage.reportPaths=coverage/coverage-report.xml  # Adjust the cov
 
 # Specify the SonarQube server URL (point to your SonarQube container IP)
 sonar.host.url=http://172.28.95.37:9000
+sonar.login=sqp_d71cf354e237a65f6011cd03657d2fa738614901
