--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -18,7 +18,7 @@ sonar.projectVersion=1.0
 sonar.sources=jobportal-application
 
 # Path to test files (optional, if you have tests in a separate folder)
-sonar.tests=jobportal-application/tests
+#sonar.tests=jobportal-application/tests
 
 # Specify the language to analyze (Python)
 sonar.language=py
