--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -27,4 +27,6 @@ sonar.python.coverage.reportPaths=coverage/coverage-report.xml  # Adjust the cov
 
 # Specify the SonarQube server URL (point to your SonarQube container IP)
 sonar.host.url=http://172.28.95.37:9000
-sonar.login=sqp_d71cf354e237a65f6011cd03657d2fa738614901
+#sonar.login=sqp_d71cf354e237a65f6011cd03657d2fa738614901
+
+sonar.login=sqa_c09dc922a1e6269bb8f54fcf90c446a02d026b15
