--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -29,4 +29,4 @@ sonar.python.coverage.reportPaths=coverage/coverage-report.xml  # Adjust the cov
 sonar.host.url=http://172.28.95.37:9000
 #sonar.login=sqp_d71cf354e237a65f6011cd03657d2fa738614901
 
-sonar.login=sqa_c09dc922a1e6269bb8f54fcf90c446a02d026b15
+#sonar.login=sqa_c09dc922a1e6269bb8f54fcf90c446a02d026b15
